# kaos-reactor

./: README.md  meson.build
.github/workflows/: release.yml
kaos/reactor/: app.cc  app.h  audio_analysis.h  audio_analyzer.cc  audio_analyzer.h  audio_file.cc  cinematic_target_widget.cc  main.cc  preview_widget.cc  preview_widget.h  waveform_widget.cc  waveform_widget.h
noise_reactor/: app.cc  app.h  audio_analysis.h  audio_analyzer.cc  audio_analyzer.h  audio_file.cc  audio_file.h  audio_frame_data.h  cinematic_target_widget.cc  cinematic_target_widget.h  effect_params.h  export_dialog.cc  export_dialog.h  main.cc  preview_widget.cc  preview_widget.h  waveform_widget.cc  waveform_widget.h
shaders/: image.frag  image.vert  shaders.qrc
